fixed scroll container overflow issue

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,7 +1,7 @@
 .card {
-    margin: 1rem;
-    max-width: 28rem;
-    min-width: 10rem;
+    margin: 1.5rem 2rem;
+    width: 30rem;
+    min-width: 20rem;
     height: 40rem;
     background-color: #ffffff;
     overflow: hidden;
@@ -14,7 +14,7 @@
 }
 
 .card:hover {
-    transform: scale(1.02);
+    transform: scale(1.03);
 }
 
 .card__img {
@@ -29,7 +29,7 @@
     height: 35%;
     flex-direction: column;
     justify-content: center;
-    padding: 1rem .5rem 2rem;
+    padding: 1rem .75rem 2rem;
 }
 
 .card__content {
